# WaveNeXt

./: .gitignore  LICENSE  README.md  main.py  notes.md  pyproject.toml
Replication/preprocessing/: data_prep.py
Replication/src/: models.py  models_finetunned.py  training.py
